# fatcrab-trading

./: .gitignore  Cargo.toml  README.md
src/: common.rs  error.rs  lib.rs  make_trade.rs  maker.rs  offer.rs  order.rs  peer.rs  peer_msg.rs  purse.rs  take_trade.rs  taker.rs  trade_order.rs  trade_rsp.rs  trader.rs
src/maker/: data.rs  maker.rs  mod.rs  state.rs
src/persist/: mod.rs  std.rs  tokio.rs
src/purse/: data.rs  mod.rs  purse.rs
src/taker/: data.rs  mod.rs  state.rs  taker.rs
tests/: node.rs  test.rs  test_buy.rs  test_restore_buy.rs  test_restore_sell.rs  test_sell.rs
tests/common/: logger.rs  mod.rs  node.rs  relay.rs
