[package]
name = "fatcrab-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
crusty-n3xb = { path = "../crusty-n3xb" }
uuid = { version = "1.4", features = ["serde", "v4"] }
tokio = { version = "1.34", features = ["sync", "time"] }
secp256k1 = "0.27"
typetag = "0.2"
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
anyhow = "1.0"
base64 = { version = "0.21.0" }
bdk = { version = "0.29.0", default-features = true, features = [
    "all-keys",
    "key-value-db",
    "rpc",
] }
electrsd = { version = "*", default-features = false, features = [
    "bitcoind_22_0",
] }
hyper = "0.14"
miniscript = { version = "9.0", features = ["serde", "compiler"] }
nostr-rs-relay = "0.8"
