[package]
name = "fatcrab-trading"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

bdk = { git = "https://github.com/nobu-maeda/bdk", branch = "release/0.29", default-features = true, features = [
    "all-keys",
    "key-value-db",
    "rpc",
] }
bitcoin = "0.30"
bip39 = "2.0"
core-rpc = "0.17"
crusty-n3xb = { path = "../crusty-n3xb" }
secp256k1 = "0.27"

serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["sync", "time"] }
typetag = "0.2"
url = { version = "2", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.10"
base64 = { version = "0.21.0" }
electrsd = { version = "*", default-features = false, features = [
    "bitcoind_23_0",
] }
hyper = "0.14"
miniscript = { version = "9.0", features = ["serde", "compiler"] }
nostr-rs-relay = "0.8"
